adding socket calendar (old layout)

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,263 +1,383 @@
+@import url("https://fonts.googleapis.com/css?family=Roboto&display=swap");
+
 body {
-    font-family: "Lato", Arial, sans-serif;
-    font-weight: 400;
-    line-height: 1.7;
+  font-family: "Lato", Arial, sans-serif;
+  font-weight: 400;
+  line-height: 1.7;
 }
 
 .mainBanner {
-    background-image: linear-gradient(to bottom, rgb(242, 110, 53), rgba(169, 14, 14, 0.73)),url(https://www.adrwealth.com.au/wp-content/uploads/2019/02/How_to_balance_healthy_eating_and_a_social_life.jpg);
-    background-size: cover;
-    background-attachment: fixed;
-    min-height: 110vh;
+  background-image: linear-gradient(
+      to bottom,
+      rgb(242, 110, 53),
+      rgba(169, 14, 14, 0.73)
+    ),
+    url(https://www.adrwealth.com.au/wp-content/uploads/2019/02/How_to_balance_healthy_eating_and_a_social_life.jpg);
+  background-size: cover;
+  background-attachment: fixed;
+  min-height: 110vh;
 }
 
 .mainLogo {
-    margin-left: 20%;
+  margin-left: 20%;
 }
 
 .logoSection {
-    text-align: right;
+  text-align: right;
 }
 
 .mainNav {
-    padding-top: 1rem;
-    padding-bottom: 7rem;
-    width: 100%;
+  padding-top: 1rem;
+  padding-bottom: 7rem;
+  width: 100%;
 }
 
 .navbar-toggler {
-    display: flex;
-    margin-left: auto;
+  display: flex;
+  margin-left: auto;
 }
 
 .navbar-nav {
-    margin-right: 30%;
+  margin-right: 30%;
 }
 
 .navbar-collapse li {
-    padding-left: 0.5rem;
+  padding-left: 0.5rem;
 }
 
-
 .slogan {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .slogan h1 {
-    font-size: 4rem;
-    text-align: center;
-    color: #fff;
-    font-weight: 300;
-    margin-bottom: 5rem;
+  font-size: 4rem;
+  text-align: center;
+  color: #fff;
+  font-weight: 300;
+  margin-bottom: 5rem;
 }
 
 .bannerContent {
-    display: flex; 
-    justify-content: center;
-    align-items: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .formSection {
-    border-top: 0.7rem solid #09C6AB;
-    box-shadow: 0px 2px 5px 0px rgba(0,0,0, 0.15);
-    background-color: white;
-    height: 50%;
-    text-align: center;
-    border-radius: 1rem;
-    width: 80%;
-    margin-bottom: 3rem;
+  border-top: 0.7rem solid #09c6ab;
+  box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.15);
+  background-color: white;
+  height: 50%;
+  text-align: center;
+  border-radius: 1rem;
+  width: 80%;
+  margin-bottom: 3rem;
 }
 
 .filterForm {
-    background-color: white;
-    padding: 1rem;
-    color: grey;
+  background-color: white;
+  padding: 1rem;
+  color: grey;
 }
 
 .filterForm h1 {
-    color: black;
-    text-align: center;
-    font-size: 1.5rem;
-    padding-bottom: 1rem;
+  color: black;
+  text-align: center;
+  font-size: 1.5rem;
+  padding-bottom: 1rem;
 }
 
 .form-control {
-    text-align: center !important;
+  text-align: center !important;
 }
 
 .filterInput {
-    text-align: center;
+  text-align: center;
 }
 
 .introSection h1 {
-    padding: 3rem;
-    font-weight: 300;
-    font-size: 4rem;
-    text-align: center;
-    color: white;
+  padding: 3rem;
+  font-weight: 300;
+  font-size: 4rem;
+  text-align: center;
+  color: white;
 }
 
 .introSection {
-    background-color: #27227D;
-    padding-bottom: 4rem;
+  background-color: #27227d;
+  padding-bottom: 4rem;
 }
 
 .introSection p {
-    text-align: center;
-    color: white;
-    font-weight: 300;
-    font-size: 1.2rem;
-    padding-bottom: 1rem;
-    display: flex;
-    flex-wrap: wrap;
+  text-align: center;
+  color: white;
+  font-weight: 300;
+  font-size: 1.2rem;
+  padding-bottom: 1rem;
+  display: flex;
+  flex-wrap: wrap;
 }
 
 .appIntro {
-    padding-top: 5rem;
+  padding-top: 5rem;
 }
 
 .intro {
-    display: block;
-    text-align: center;
+  display: block;
+  text-align: center;
 }
 
 .introSteps {
-    margin: 3rem 0rem;
+  margin: 3rem 0rem;
 }
 
 .intro h2 {
-    color: white;
-    text-align: center;
-    font-size: 1.6rem;
-    padding-bottom: 1rem;
+  color: white;
+  text-align: center;
+  font-size: 1.6rem;
+  padding-bottom: 1rem;
 }
 
 .nav-link {
-    margin-bottom: 1rem;
+  margin-bottom: 1rem;
 }
 
 .aboutUsSection {
-    padding: 3rem;
-    color: grey;
+  padding: 3rem;
+  color: grey;
 }
 
 .aboutUs {
-    text-align: center;
-    padding: 1rem;
+  text-align: center;
+  padding: 1rem;
 }
 
 .aboutUs h3 {
-    padding-top: 5rem;
-    font-weight: bold;
-    font-size: 1rem;
-    letter-spacing: 0.2rem;
-    text-transform: uppercase;
+  padding-top: 5rem;
+  font-weight: bold;
+  font-size: 1rem;
+  letter-spacing: 0.2rem;
+  text-transform: uppercase;
 }
 
 .footer p {
-    font-size: 0.8rem;
-    text-align: center;
-    color: grey;
+  font-size: 0.8rem;
+  text-align: center;
+  color: grey;
 }
 
 .footer {
-    height: 30vh;
-    border-top: 0.5px solid grey;
-    padding-top: 2rem;
+  height: 30vh;
+  border-top: 0.5px solid grey;
+  padding-top: 2rem;
 }
 
 .secondPageBanner {
-    height: 35rem;
-    background-image: linear-gradient(to bottom, rgb(242, 110, 53), rgba(169, 14, 14, 0.73)),url(https://www.hdnicewallpapers.com/Walls/Big/Food%20and%20Drinks/Friends_Eating_French_Fries_and_Burger_4K_Wallpaper.jpg);
-    background-size: cover;
-    background-attachment: fixed;
+  height: 35rem;
+  background-image: linear-gradient(
+      to bottom,
+      rgb(242, 110, 53),
+      rgba(169, 14, 14, 0.73)
+    ),
+    url(https://www.hdnicewallpapers.com/Walls/Big/Food%20and%20Drinks/Friends_Eating_French_Fries_and_Burger_4K_Wallpaper.jpg);
+  background-size: cover;
+  background-attachment: fixed;
 }
 
 .secPageHeader {
-    text-align: center;
-    font-size: 4rem;
-    font-weight: 300;
-    color: white;
-    text-transform: uppercase;
-    letter-spacing: 0.6rem;
+  text-align: center;
+  font-size: 4rem;
+  font-weight: 300;
+  color: white;
+  text-transform: uppercase;
+  letter-spacing: 0.6rem;
 }
 
 .secPageHeadContainer {
-    height: 50%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  height: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .secPageMain {
-    height: 60rem;
-    background-color: #27227D;
+  height: 60rem;
+  background-color: white;
 }
 
 .mainProfile {
-    height: 70%;
-    width: 70%;
-    border: 1px solid white;
-    background-color: white;
+  height: 70%;
+  width: 70%;
+  border: 1px solid white;
+  background-color: white;
 }
 
 .mainProfileOuter {
-    border: 1px solid white;
+  border: 1px solid white;
 }
 
 .miniCalendar {
-    height: 60rem;
-    border-left: 1px solid white;
+  height: 60rem;
+  border-left: 1px solid white;
 }
 
-
 .card-deck {
-    margin: 10% 10% 10% 10%;
-    box-shadow: 10px 10px 10px 10px rgba(0,0,0, 0.15);
+  margin: 10% 10% 10% 10%;
+  box-shadow: 10px 10px 10px 10px rgba(0, 0, 0, 0.15);
 }
 
 .profileHeader {
-    text-transform: uppercase;
-    color: grey;
-    font-size: 1.5rem;
-    letter-spacing: 0.5rem;
-    font-weight: 400;
+  text-transform: uppercase;
+  color: grey;
+  font-size: 1.5rem;
+  letter-spacing: 0.5rem;
+  font-weight: 400;
 }
 
-.card-title{
-    text-align: center;
-    font-size: 1rem;
-    letter-spacing: 0.5rem;
-    font-weight: 400;
-    text-transform: uppercase;
-    color: grey;
+.card-title {
+  text-align: center;
+  font-size: 1rem;
+  letter-spacing: 0.5rem;
+  font-weight: 400;
+  text-transform: uppercase;
+  color: grey;
 }
 
 .mockCalendar {
-    background-color: white;
-    width: 70vh; 
-    height: 80vh;
+  background-color: white;
+  width: 70vh;
+  height: 80vh;
+  text-align: center;
+  margin: 25% 25% 25% 25%;
+}
+
+@media screen and (max-width: 990px) {
+  .mainLogo {
+    margin-left: 33%;
+    width: 9rem;
+  }
+
+  .mainNav {
+    padding-bottom: 2rem;
+  }
+
+  .slogan h1 {
+    font-size: 2.5rem;
     text-align: center;
-    margin: 25% 25% 25% 25%;
+  }
 }
 
-@media screen and (max-width: 990px) {  
-    .mainLogo {
-       margin-left: 33%;
-       width: 9rem;
+/*************/
 
-    }
+/*chat*/
 
-    .mainNav {
-        padding-bottom: 2rem;
-    }
-
-    .slogan h1 {
-        font-size: 2.5rem;
-        text-align: center;
-    }
-
+:root {
+  --dark-color-a: #27227d;
+  --dark-color-b: #27227d;
+  --light-color: #e6e9ff;
+  --success-color: #5cb85c;
+  --error-color: #d9534f;
 }
 
+ul {
+  list-style: none;
+}
+
+a {
+  text-decoration: none;
+}
+
+/* Chat Page */
+
+#users {
+  padding: 0px;
+}
+
+.chat-container {
+  max-width: 50rem;
+  background: #fff;
+  margin: 30px auto;
+  overflow: hidden;
+}
+
+.chat-main {
+  display: grid;
+  grid-template-columns: 1fr 3fr;
+}
+
+.chat-sidebar {
+  background: var(--dark-color-b);
+  color: #fff;
+  padding: 20px 20px 60px;
+  overflow-y: scroll;
+}
+
+.chat-sidebar h2 {
+  font-size: 15px;
+  background: rgba(0, 0, 0, 0.1);
+  padding: 10px;
+  margin-bottom: 20px;
+}
+
+.chat-sidebar h3 {
+  margin-bottom: 15px;
+}
+
+.chat-sidebar ul li {
+  padding: 10px 0;
+}
+
+.chat-messages {
+  padding: 30px;
+  min-height: 400px;
+  max-height: 500px;
+  overflow-y: scroll;
+}
+
+.chat-messages .message {
+  padding: 10px;
+  margin-bottom: 15px;
+  background-color: var(--light-color);
+  border-radius: 5px;
+  overflow-wrap: break-word;
+}
+
+.chat-messages .message .meta {
+  font-size: 15px;
+  font-weight: bold;
+  color: var(--dark-color-b);
+  opacity: 0.7;
+  margin-bottom: 7px;
+}
+
+.chat-messages .message .meta span {
+  color: #777;
+}
+
+.chat-form-container {
+  padding: 20px 30px;
+  background-color: var(--dark-color-a);
+}
+
+.chat-form-container form {
+  display: flex;
+}
+
+.chat-form-container input[type="text"] {
+  font-size: 16px;
+  padding: 5px;
+  height: 40px;
+  flex: 1;
+}
+
+@media (max-width: 700px) {
+  .chat-main {
+    display: block;
+  }
+
+  .chat-sidebar {
+    display: none;
+  }
+}
