--- a/views/calendar.handlebars
+++ b/views/calendar.handlebars
@@ -1,75 +1,120 @@
-<div class="container">
-	<div class="row">
-        <div class="span12">
-    		<table class="table-condensed table-bordered table-striped mockCalendar">
-                <thead>
-                    <tr>
-                      <th colspan="7">
-                        <span class="btn-group">
-                            <a class="btn"><i class="icon-chevron-left"></i></a>
-                        	<a class="btn active">February 2012</a>
-                        	<a class="btn"><i class="icon-chevron-right"></i></a>
-                        </span>
-                      </th>
-                    </tr>
-                    <tr>
-                        <th>Su</th>
-                        <th>Mo</th>
-                        <th>Tu</th>
-                        <th>We</th>
-                        <th>Th</th>
-                        <th>Fr</th>
-                        <th>Sa</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td class="muted">29</td>
-                        <td class="muted">30</td>
-                        <td class="muted">31</td>
-                        <td>1</td>
-                        <td>2</td>
-                        <td>3</td>
-                        <td>4</td>
-                    </tr>
-                    <tr>
-                        <td>5</td>
-                        <td>6</td>
-                        <td>7</td>
-                        <td>8</td>
-                        <td>9</td>
-                        <td>10</td>
-                        <td>11</td>
-                    </tr>
-                    <tr>
-                        <td>12</td>
-                        <td>13</td>
-                        <td>14</td>
-                        <td>15</td>
-                        <td>16</td>
-                        <td>17</td>
-                        <td>18</td>
-                    </tr>
-                    <tr>
-                        <td>19</td>
-                        <td class="btn-primary"><strong>20</strong></td>
-                        <td>21</td>
-                        <td>22</td>
-                        <td>23</td>
-                        <td>24</td>
-                        <td>25</td>
-                    </tr>
-                    <tr>
-                        <td>26</td>
-                        <td>27</td>
-                        <td>28</td>
-                        <td>29</td>
-                        <td class="muted">1</td>
-                        <td class="muted">2</td>
-                        <td class="muted">3</td>
-                    </tr>
-                </tbody>
-            </table>
+<div class="span12 mr-2">
+    <div class="container">
+        <div id="calendar" class="mt-5 ">
         </div>
-	</div>
+    </div>
+</div>
+
+
+<div class="d-none uName">{{uName}}</div>
+<!-- Modal -->
+<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">New Event</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <form action="/newEvent/{{uName}}" method="POST">
+                    <div class="form-group">
+                        <div class="input-group input-group-lg">
+                            <div class="input-group-prepend">
+                                <span class="input-group-text bg-dark text-light">
+                                    <i class="fas fa-heading"></i>
+                                </span>
+                            </div>
+                            <input type="text" id="title" name="title" class="form-control bg-light text-black"
+                                placeholder="Restaurant">
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <div class="input-group input-group-lg">
+                            <div class="input-group-prepend">
+                                <span class="input-group-text bg-dark text-light">
+                                    <i class="fas fa-heading"></i>
+                                </span>
+                            </div>
+                            <input type="datetime-local" id="date" name="date" class="form-control bg-light text-black"
+                                placeholder="Date">
+                        </div>
+                    </div>
+
+
+
+
+
+                    <input type="submit" value="Submit" class="btn bg-dark text-light btn-block btn-lg m-0 submit-btn">
+
+                </form>
+            </div>
+            <div class="modal-footer">
+
+            </div>
+        </div>
+    </div>
+</div>
+<div class="modal fade" id="exampleModal2" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Update Event</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <form method="POST">
+                    <div class="form-group d-none">
+                        <div class="input-group input-group-lg">
+                            <div class="input-group-prepend">
+                                <span class="input-group-text bg-dark text-light">
+                                    <i class="fas fa-heading"></i>
+                                </span>
+                            </div>
+                            <input type="text" id="id" name="id" class="form-control bg-light text-black updateNumber">
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <div class="input-group input-group-lg">
+                            <div class="input-group-prepend">
+                                <span class="input-group-text bg-dark text-light">
+                                    <i class="fas fa-heading"></i>
+                                </span>
+                            </div>
+                            <input type="text" id="title" name="title"
+                                class="form-control bg-light text-black updateTitle" placeholder="Restaurant">
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <div class="input-group input-group-lg">
+                            <div class="input-group-prepend">
+                                <span class="input-group-text bg-dark text-light">
+                                    <i class="fas fa-heading"></i>
+                                </span>
+                            </div>
+                            <input type="datetime-local" id="date" name="date" class="form-control bg-light text-black"
+                                placeholder="Date">
+                        </div>
+                    </div>
+
+
+
+
+
+                    <input type="submit" value="Update" class="btn bg-dark text-light btn-block btn-lg m-0 submit-btn"
+                        formaction="/updateEvent/{{uName}}">
+                    <input type="submit" value="Delete"
+                        class="btn btn-danger text-light btn-block btn-lg m-0 mt-2 submit-btn"
+                        formaction="/deleteEvent/{{uName}}">
+
+                </form>
+            </div>
+            <div class="modal-footer">
+
+            </div>
+        </div>
+    </div>
 </div>
