--- a/views/layouts/secondary.handlebars
+++ b/views/layouts/secondary.handlebars
@@ -12,16 +12,19 @@
     <!-- Bootstrap  -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
         integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/fullcalendar@5.3.2/main.min.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/js/all.min.js"></script>
 
     <!--Stylesheet-->
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 
 <body>
     <div class="secondPageBanner">
         <div class="mainNav">
             <nav class="navbar navbar-expand-lg navbar-dark">
-                <img class="mainLogo" src="./images/logo.png" width="200">
+                <img class="mainLogo" src="/images/logo.png" width="200">
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -29,8 +32,7 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav ml-auto">
                         <li class="nav-item">
-                            <a class="nav-link" href="/">Find A Table<span
-                                    class="sr-only">(current)</span></a>
+                            <a class="nav-link" href="/">Find A Table<span class="sr-only">(current)</span></a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="./profile.html">Profile</a>
@@ -58,7 +60,7 @@
                         <div class="card-header bg-transparent border-success">
                             <h1 class="profileHeader text-center">Jane Smith</h1>
                         </div>
-                        <img class="card-img-top" src="images/jane_smith.jpg" alt="Card image cap">
+                        <img class="card-img-top" src="/images/jane_smith.jpg" alt="Card image cap">
                         <div class="card-body">
                             <h5 class="card-title">About Me</h5>
                             <p class="card-text">This is a longer card with supporting text below as a natural lead-in
@@ -93,7 +95,9 @@
     </footer>
 
 
-
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/qs/6.9.4/qs.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.3.0/socket.io.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/list.js/1.5.0/list.min.js"></script>
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
@@ -104,7 +108,9 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
-    <script src="index.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/fullcalendar@5.3.2/main.min.js"></script>
+    <script src="/js/func.js"></script>
+    <script src="/js/chatroom.js"></script>
 </body>
 
 </html>
