--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -14,14 +14,14 @@
         integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
 
     <!--Stylesheet-->
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 
 <body>
     <div class="mainBanner">
         <div class="mainNav">
             <nav class="navbar navbar-expand-lg navbar-dark">
-                <img class="mainLogo" src="./images/logo.png" width="200">
+                <img class="mainLogo" src="/images/logo.png" width="200">
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -29,7 +29,7 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav ml-auto">
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Log-In <span class="sr-only">(current)</span></a>
+                            <a class="nav-link" href="/login ">Log-In <span class="sr-only">(current)</span></a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="/secondary">Profile</a>
@@ -58,30 +58,51 @@
                     <h1>How It Works</h1>
                 </div>
                 <div class="col-12">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam posuere augue
-                        vitae augue scelerisque pulvinar. Vivamus et nisi semper, porttitor mi a,
-                        posuere libero. In eu est dui. Sed lacinia efficitur nisi sed pharetra.</p>
+                    <p class="introPara"><b><i>The sharing of food has been a part of the human story since the beginning of time;
+                        “To break bread together,” a phrase outlined in the bible, encapsulates the power of a meal in its ability to forge relationships, 
+                        bury anger and provoke laughter.</b></i><br><br>
+
+                    <p>Whether you're a tourist looking to dine with locals, trying to network with like-minded individuals, or simply looking to meet a new friend in the city -
+                        MunchM8 is a social dining platform that allows you to build new connections with one or more people, while enjoying a delicious meal together. In a time where community cohesion is ever more important, 
+                        making time for and joining in communal meals is perhaps the single most important thing we can do – both for our own health and wellbeing and for that of the wider community.'
+
+
+                    </p>
+                        
+
                 </div>
             </div>
             <div class="container">
                 <div class="row">
                     <div class="col-lg-4 col-md-6 intro">
-                        <img class="introSteps" src="images/one.svg" width="100" height="100">
-                        <h2>Lorem ipsum dolor sit amet</h2>
-                        <p>Dignissimos asperiores vitae velit veniam totam fuga
-                            molestias accusamus alias autem provident. Odit ab aliquam dolor eius.</p>
+                        <img class="introSteps" src="/images/one.svg" width="100" height="100">
+                        <h2>Find A Table</h2>
+                        <br>
+                        <div class="introImageBox">
+                            <img class="introImages" src="/images/foodSearch.png" width="320" height="250">
+                        </div>
+                        <br>
+                        <p>Enter your location, filter your food preferences and find tables at restaurants near you with guests waiting to be joined.</p>
                     </div>
                     <div class="col-lg-4 col-md-6 intro">
-                        <img class="introSteps" src=" images/two.svg" width="100" height="100">
-                        <h2>Lorem ipsum dolor sit amet</h2>
-                        <p>Dignissimos asperiores vitae velit veniam totam fuga
-                            molestias accusamus alias autem provident. Odit ab aliquam dolor eius.</p>
+                        <img class="introSteps" src="/images/two.svg" width="100" height="100">
+                        <h2>Co-ordinate</h2>
+                        <br>
+                    <div class="introImageBox">
+                            <img class="introImages" src="/images/chat.jpg" width="320" height="250">
+                        </div>
+                        <br>
+                        <p>Chat with your potential MunchM8(s) via our chat messenger, co-ordinate and make final arrangements before you confirm your meal together </p>
                     </div>
                     <div class="col-lg-4 col-md-6 intro">
-                        <img class="introSteps" src=" images/three.svg" width="100" height="100">
-                        <h2>Lorem ipsum dolor sit amet</h2>
-                        <p>Dignissimos asperiores vitae velit veniam totam fuga
-                            molestias accusamus alias autem provident. Odit ab aliquam dolor eius.</p>
+                        <img class="introSteps" src="/images/three.svg" width="100" height="100">
+                        <h2>Meet & Munch</h2>
+                        <br>
+                    <div class="introImageBox">
+                            <img class="introImages" src="/images/eatingTogether.jpg" width="320" height="250">
+                        </div>
+                        <br>
+                        <p>Meet your new MunchM8(s), enjoy a delicious meal together and relish the opportunity to make new connections.</p>
                     </div>
                 </div>
             </div>
@@ -93,9 +114,7 @@
                 <div class="col-lg-3 col-md-6 aboutUs">
                     <h3>About Us</h3>
                     <br>
-                    <p>Dignissimos asperiores vitae velit veniam totam fuga
-                        molestias accusamus alias autem provident. Odit ab aliquam dolor eius.
-                        molestias accusamus alias autem provident. Odit ab aliquam dolor eius.</p>
+                    <p>MunchM8 is the very first social-dining platform in Hong Kong that allows you to find one or more guests in your area to share a meal with.</p>
                 </div>
                 <div class="col-lg-3 col-md-6 aboutUs">
                     <h3>Restaurant Reviews</h3>
