--- a/views/layouts/secondary.handlebars
+++ b/views/layouts/secondary.handlebars
@@ -14,7 +14,7 @@
         integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
 
     <!--Stylesheet-->
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 
 <body>
@@ -33,7 +33,7 @@
                                     class="sr-only">(current)</span></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="./profile.html">Profile</a>
+                            <a class="nav-link" href="/secondary">Profile</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">Calendar</a>
@@ -51,40 +51,8 @@
         </div>
     </div>
     <div class="secPageMain">
-        <div class="row">
-            <div class="col-lg-6 col-md-12">
-                <div class="card-deck">
-                    <div class="card">
-                        <div class="card-header bg-transparent border-success">
-                            <h1 class="profileHeader text-center">Jane Smith</h1>
-                        </div>
-                        <img class="card-img-top" src="images/jane_smith.jpg" alt="Card image cap">
-                        <div class="card-body">
-                            <h5 class="card-title">About Me</h5>
-                            <p class="card-text">This is a longer card with supporting text below as a natural lead-in
-                                to additional content. This content is a little bit longer.
-                                Dignissimos asperiores vitae velit veniam totam fuga
-                                molestias accusamus alias autem provident. Odit ab aliquam dolor eius.
-                                molestias accusamus alias autem provident. Odit ab aliquam dolor eius.
-                                to additional content. This content is a little bit longer.
-                            </p>
-                            <h5 class="card-title">Interests</h5>
-                            <ul>
-                                <li>Knitting</li>
-                                <li>Yelling at store managers</li>
-                                <li>Driving kids to soccer practice</li>
-                            </ul>
-                            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-6 col-md-12 miniCalendar">
 
                 {{{body}}}
-
-            </div>
-        </div>
     </div>
     <footer>
         <div class="footer">
