--- a/public/css/style.css
+++ b/public/css/style.css
@@ -110,8 +110,18 @@ body {
     font-weight: 300;
     font-size: 1.2rem;
     padding-bottom: 1rem;
-    display: flex;
-    flex-wrap: wrap;
+}
+
+.intro h2 {
+    text-transform: uppercase;
+    font-size: 1.5rem;
+    color: white;
+    letter-spacing: 0.5rem;
+    font-weight: 400;
+}
+
+.introPara {
+    font-size: 1.3rem !important;
 }
 
 .appIntro {
@@ -125,13 +135,6 @@ body {
 
 .introSteps {
     margin: 3rem 0rem;
-}
-
-.intro h2 {
-    color: white;
-    text-align: center;
-    font-size: 1.6rem;
-    padding-bottom: 1rem;
 }
 
 .nav-link {
@@ -242,6 +245,78 @@ body {
     text-align: center;
     margin: 25% 25% 25% 25%;
 }
+
+.loginForm {
+    background-color: white;
+    padding: 0.5rem;
+    color: grey;
+}
+
+.loginForm h1 {
+    color: black;
+    text-align: center;
+    font-size: 1.5rem;
+    padding: 1rem;
+}
+
+.loginInput {  
+    margin: 0;
+    padding-top: 0.5rem;
+}
+
+.loginSubmit {
+    margin: 1rem 0rem;
+}
+
+.loginRedirect {
+    padding-bottom: 1rem;
+}
+
+// 
+.registerForm {
+    background-color: white;
+    padding: 0.5rem;
+    color: grey;
+}
+
+.registerForm h1 {
+    color: black;
+    text-align: center;
+    font-size: 1.5rem;
+    padding: 1rem;
+}
+
+.registerInput {  
+    margin: 0;
+    padding-top: 0.5rem;
+}
+
+.registerSubmit {
+    margin: 1rem 0rem;
+}
+
+.registerRedirect {
+    padding-bottom: 1rem;
+}
+
+.errorMessages li {
+    font-size: 0.9rem;
+    color: red;
+    text-align: center; 
+}
+
+.errorMessage {
+    font-size: 1rem;
+    color: red;
+    text-align: center; 
+}
+
+.successMessage {
+    font-size: 1rem;
+    color: rgb(8, 154, 8);
+    text-align: center; 
+}
+
 
 @media screen and (max-width: 990px) {  
     .mainLogo {
